# eai

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  seed.py
backend/app/routers/: advice.py  inventory.py  profile.py  recognitions.py  reference.py  user_events.py
backend/app/services/: advice_agent.py  advice_context.py  llm_client.py  prompts.py  user_food_tracking.py
backend/scripts/: reset_demo_data.py
backend/tests/: conftest.py  test_advice_agent.py  test_advice_user_events.py  test_cors.py  test_health.py  test_llm_client.py  test_profile_image_llm_scenarios.py  test_recognition_inventory.py  test_reference_data.py  test_seed.py
docs/: FRONTEND_PLAN.md  PROJECT_PLAN.md  TEST_REPORT.md  UI_STYLE_GUIDE.md
exports/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
reports/: README.md  device_validation.md  stage_a_training_log.md  stage_b_training_log.md  v1_eval.md
scripts/: capture_ai_camera.py  pi_live_focus.py  sync_public_datasets.sh
tests/: test_build_public_manifest.py  test_export_foodkeeper_zh.py  test_fit_pytorch_classifier.py  test_release_v1_assets.py  test_train_v1.py  test_validate_manifest.py
tools/: README.md  __init__.py  build_public_manifest.py  export_foodkeeper_zh.py  release_v1_assets.py  validate_manifest.py
training/: README.md  backend_pytorch.md  config_stage_a.md  config_stage_b.md  fit_pytorch_classifier.py  requirements-pytorch.txt  train_v1.py
yolo26-11111/: data.yaml  (+4 more)
(+1473 files in other folders)
